Fix spacing between cards

--- a/frontend/src/components/molecules/QuickAccessView/style.module.scss
+++ b/frontend/src/components/molecules/QuickAccessView/style.module.scss
@@ -6,6 +6,8 @@
 	margin-top: 10px;
 	overflow-y: visible;
 	overflow-x: auto;
+  margin-right: -10px;
+  margin-left: -10px;
 	// margin-left: 0; // leave space before card
 }
 
@@ -15,8 +17,8 @@
 }
 .quickAccessRow::-webkit-scrollbar-track {
   background: $white;
-	margin-left: 15px; 
-	margin-right: 15px; 
+	margin-left: 10px; 
+	margin-right: 10px; 
 }
 .quickAccessRow::-webkit-scrollbar-thumb {
   background-color: $white;
